# Llama-diffusion

./: .gitignore  ANDROID_IMPROVEMENTS.md  CMakeLists.txt  CONCURRENT_THROUGHPUT_TEST_SUMMARY.md  OPTIMIZATION_REPORT.md  README.md  build_android.sh  chat.py  example_usage.py  example_usage_stream.py  pyproject.toml  requirements.txt  setup.py  test_concurrent_throughput.py  test_profiling.py
benchmark/: benchmark_sdar.py  benchmark_speed.py  check_progress.sh
benchmark_results/20251127_060704/: BENCHMARK_REPORT.md  results.json
benchmark_results/20251127_075827/: results.json
benchmark_results/speed_20251127_090204/: SPEED_REPORT.md  results.json
concurrent_throughput_runs/20251129_133452/: concurrent_throughput_results.json
docs/: GPU_SAMPLER_OPTIMIZATION.md
llama_diffusion/: CMakeLists.txt  __init__.py  android_jni.h  diffusion_binding.cpp  diffusion_profiler.h  diffusion_sampler.cpp  diffusion_sampler.h  diffusion_sampler_profiled.cpp  diffusion_sampler_profiled.h  diffusion_types.h  gpu_sampler.cu  gpu_sampler.h  jni_wrapper.cpp  python_bindings_profiled.cpp
